--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,12 @@
   <section>
     <h1>Bookmarked Segments</h1>
   </section>
+  <% if current_user.github_token? %>
+    <section>
+      <h1>Github Repos</h1>
+      <% @user.repos.each do |repo| %>
+        <p><%= link_to "#{repo.name}", repo.url %></p>
+      <% end %>
+    </section>   
+  <% end %>
 </section>
