--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_link_tag 'application' %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag :jquery, :jquery_ujs %>
   </head>
   <body>
     <%= render 'partials/nav' %>
