--- a/app/views/admin/tutorials/new.html.erb
+++ b/app/views/admin/tutorials/new.html.erb
@@ -9,9 +9,15 @@
 
   <h3>Videos</h3>
 
-  <%= f.fields_for :videos do |builder| %>
-    <%= f.label :youtube_url %>
-    <%= f.text_field :video_id, class: "block col-4 field" %>
+  <%= f.fields_for :videos, @tutorial.videos.new do |video| %>
+    <%= video.label :title %>
+    <%= video.text_field :title, class: "block col-4 field" %>
+    <%= video.label :description %>
+    <%= video.text_field :description, class: "block col-4 field" %>
+    <%= video.label :thumbnail %>
+    <%= video.text_field :thumbnail, class: "block col-4 field" %>
+    <%= video.label :youtube_url %>
+    <%= video.text_field :video_id, class: "block col-4 field" %>
   <% end %>
 
   <%= f.submit "Save", class: "mt2 btn btn-primary mb1 bg-teal"  %>
