update youtube URL to youtube ID

--- a/app/views/admin/tutorials/new.html.erb
+++ b/app/views/admin/tutorials/new.html.erb
@@ -16,7 +16,7 @@
     <%= video.text_field :description, class: "block col-4 field" %>
     <%= video.label :thumbnail %>
     <%= video.text_field :thumbnail, class: "block col-4 field" %>
-    <%= video.label :youtube_url %>
+    <%= video.label "YouTube ID" %>
     <%= video.text_field :video_id, class: "block col-4 field" %>
   <% end %>
 
