--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
     <li> <%= current_user.first_name  %> <%= current_user.last_name %> </li>
     <li> <%= current_user.email%> </li>
   </ul>
+  <%= link_to "Send an Invite", invite_path, class: "btn btn-primary mb1 bg-teal" %>
   <section>
     <h1>Bookmarked Segments</h1>
   </section>
