--- a/app/views/github_invite_mailer/invite.text.erb
+++ b/app/views/github_invite_mailer/invite.text.erb
@@ -1,3 +1,3 @@
 Hello <%= @name %>,
 
-	<%= @user.first_name %> has invited you to join Brownfield of Dreamz. You can create an account <%= link_to "Here", "/get_started" %>.
+	<%= @user.first_name %> has invited you to join Brownfield of Dreamz. You can create an account <%= link_to "Here", "http://brownfield-of-dreamz.herokuapp.com/register" %>.
