bookmarked videos on user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,9 @@
   <%= link_to "Send an Invite", invite_path, class: "btn btn-primary mb1 bg-teal" %>
   <section>
     <h1>Bookmarked Segments</h1>
+    <% current_user.bookmarks.each do |video| %>
+      <li><%= link_to "#{video.tutorial.title} | #{video.title}", tutorial_path(video.tutorial.id, video_id: video.id) %></li>
+    <% end %>
   </section>
   <% if current_user.github_token? %>
     <section>
@@ -33,7 +36,7 @@
     </section>
     <% else %>
       <section>
-        <%= link_to "Link to Github", github_login_path %>
+        <br><br><%= button_to "Link to Github", github_login_path, class: "btn btn-primary mb1 bg-teal" %>
       </section>
   <% end %>
 </section>
