--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,7 +38,9 @@
       <% @github.following.each do |github_user| %>
       <p><%= link_to "#{github_user.name}", github_user.url %>
         <% if github_user.registered? && !github_user.friends?(current_user) %>
-          | <%= link_to "Add Friend", add_friend_path(github_user.uid), method: :post %>            
+          | <%= link_to "Add Friend", add_friend_path(github_user.uid), method: :post %>   
+          <% elsif github_user.registered? && github_user.friends?(current_user) %>
+          | Already friends!!!         
         <% end %></p>
       <% end %>
     </section>
