friendship feature test Co-authored-by: Scott Payton <33855435+wolfeJob@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,24 +25,28 @@
         <% @github.five_repos.each do |repo| %>
           <p><%= link_to "#{repo.name}", repo.url %></p>
         <% end %>
-      <h1>Followers</h1>
-      <% @github.followers.each do |github_user| %>
-      <p><%= link_to "#{github_user.name}", github_user.url %>
-        <% if github_user.registered? && !github_user.friends?(current_user) %>
-          | <%= link_to "Add Friend", add_friend_path(github_user.uid), method: :post %>
-        <% elsif github_user.registered? && github_user.friends?(current_user) %>
-          | Already friends!!!
-        <% end %></p>
-      <% end %>
-      <h1>Following</h1>
-      <% @github.following.each do |github_user| %>
-      <p><%= link_to "#{github_user.name}", github_user.url %>
-        <% if github_user.registered? && !github_user.friends?(current_user) %>
-          | <%= link_to "Add Friend", add_friend_path(github_user.uid), method: :post %>   
-          <% elsif github_user.registered? && github_user.friends?(current_user) %>
-          | Already friends!!!         
-        <% end %></p>
-      <% end %>
+        <section class="followers">
+          <h1>Followers</h1>
+          <% @github.followers.each do |github_user| %>
+          <p><%= link_to "#{github_user.name}", github_user.url %>
+            <% if github_user.registered? && !github_user.friends?(current_user) %>
+              | <%= link_to "Add Friend", add_friend_path(github_user.uid), method: :post %>
+            <% elsif github_user.registered? && github_user.friends?(current_user) %>
+              | Already friends!!!
+            <% end %></p>
+          <% end %>
+        </section>
+        <section class="following">
+          <h1>Following</h1>
+          <% @github.following.each do |github_user| %>
+          <p><%= link_to "#{github_user.name}", github_user.url %>
+            <% if github_user.registered? && !github_user.friends?(current_user) %>
+              | <%= link_to "Add Friend", add_friend_path(github_user.uid), method: :post %>   
+              <% elsif github_user.registered? && github_user.friends?(current_user) %>
+              | Already friends!!!         
+            <% end %></p>
+          <% end %>
+        </section>
     </section>
     <% else %>
       <section>
