import youtube playlists

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -3,7 +3,7 @@
 
 <div class="p2">
   <%= link_to "New Tutorial", new_admin_tutorial_path, class: "video-position-submit btn btn-outline" %>
-</div>
+  <%= link_to "Import Playlist", new_admin_playlist_path, class: "video-position-submit btn btn-outline" %></div>
 
 <table class="col col-5">
   <tr>
