--- a/app/views/admin/tutorials/new.html.erb
+++ b/app/views/admin/tutorials/new.html.erb
@@ -1,20 +1,24 @@
 <h2>New Tutorial</h2>
+<section class="new-tutorials">
 <%= form_for [:admin, @tutorial] do |f| %>
-  <%= f.label :title %>
+  <%= f.label :title, "Tutorial Title" %>
   <%= f.text_field :title, class: "block col-4 field" %>
-  <%= f.label :description %>
+  <%= f.label :description, "Tutorial Description" %>
   <%= f.text_area :description, class: "block col-4 field"  %>
+</section>
 
+<section class="new-videos">
   <h3>Videos</h3>
 
   <%= f.fields_for :videos, @tutorial.videos.new do |video| %>
-    <%= video.label :title %>
+    <%= video.label :title, "Title" %>
     <%= video.text_field :title, class: "block col-4 field" %>
-    <%= video.label :description %>
+    <%= video.label :description, "Description" %>
     <%= video.text_field :description, class: "block col-4 field" %>
-    <%= video.label "YouTube ID" %>
+    <%= video.label :video_id, "YouTube ID" %>
     <%= video.text_field :video_id, class: "block col-4 field" %>
   <% end %>
 
   <%= f.submit "Save", class: "mt2 btn btn-primary mb1 bg-teal"  %>
 <% end %>
+</section>
