--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -1,5 +1,5 @@
 <% if @facade.videos.empty? %>
-  <h1>This tutorial has no videos. SRY></h1>
+  <h1>This tutorial has no videos. SRY</h1>
 <% else %>  
   <main class="tutorials">
   <h2><%= @facade.title %></h2>
