refactor current_video in show

--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -3,7 +3,10 @@
   <h1 id="message"></h1>
   <div class="col col-4">
     <h4>Videos</h4>
-    <ul>
+    <% if @facade.no_videos? %>
+        <p>No videos added, yell at Admin.</p>
+    <% else %>
+        <ul>
       <% @facade.videos.each do |video| %>
         <li>
           <h3><%= link_to video.title, tutorial_path(video_id: video.id), class: "show-link", id: video.position %></h3>
@@ -73,3 +76,4 @@
   </div>
 
   </main>
+<% end %>
