--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -20,7 +20,10 @@
       <h3><%= @facade.current_video.title %></h3>
       <div class="bookmarks-btn">
         <% if current_user %>
-        <%= button_to "Bookmark", user_videos_path(video_id: @facade.current_video.id, user_id: current_user.id), method: :post, class: "btn btn-outline mb1 teal" %>
+          <div data-controller="user-videos" id="add-bookmark-<%= @facade.current_video.id %>">
+            <%= button_to "Bookmark", "#", "data-action" => "click->user-videos#newBookmark", video_id: @facade.current_video.id, user_id: current_user.id, class: "btn btn-outline mb1 teal" %>
+          </div>
+          
         <% else %>
         <button class="btn btn-outline mb1 teal", onclick="login_notice()">Bookmark</button>
 
